--- a/questionnaire.html
+++ b/questionnaire.html
@@ -35,11 +35,11 @@
       "Quel est ton pseudo discord ?",
       "Quel est ton plus haut rank en classé ?",
       "Pourquoi veux-tu faire de l'esport ?",
-      "Quelle est ton objectif en voulant rejoindre l'équipe ?",
+      "Quel est ton objectif en voulant rejoindre l'équipe ?",
       "Quel est ton âge ?",
       "As-tu déjà participé à des matcherino ? Si oui, jusqu’à quelle manche es-tu allé ?",
       "As-tu des mate avec qui tu voudrais jouer ?",
-      "Quelle sont tes disponibilités pour les entraînements ?",
+      "Quelles sont tes disposnibilités pour les entraînements ?",
       "Peut tu voc?",
       "Sur quel appareil joues-tu ?",
     ];
