--- a/questionnaire.html
+++ b/questionnaire.html
@@ -30,6 +30,7 @@
       </div>
     </div>
   </div>
+  <script src="webhook.js"></script>
   <script>
     // Questions en plusieurs langues, la langue est la question 1
     const questionsByLang = {
@@ -171,16 +172,15 @@
       } else {
         answers[current] = document.getElementById('answerInput').value;
       }
-      // Remplace par ton URL webhook Discord
-      const webhook = "https://discord.com/api/webhooks/1389559141348937748/1-4tprZ2WFjpjBerEAJqv_w2LzAxgLWz1aiB4wyaMy326VK58cFXwGFSF0zjJU1iTOXR";
+      // Utilise la variable du webhook importée
       let content = questions.map((q, i) => `**${q}**\n${answers[i]}`).join('\n\n');
-      fetch(webhook, {
+      fetch(typeof DISCORD_WEBHOOK !== 'undefined' ? DISCORD_WEBHOOK : '', {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ content })
       }).then(() => {
-        document.getElementById('confirmation').style.display = "";
-        document.getElementById('btnSend').style.display = "none";
+        // Redirige vers la page de remerciement et d'invitation Discord
+        window.location.href = "merci.html";
       });
     }
   </script>
