--- a/questionnaire.html
+++ b/questionnaire.html
@@ -37,7 +37,7 @@
       FR: [
         "Quel est ton pseudo discord ?",
         "Quel est ton ton plus gros rank en classer ?",
-        "Pouquoie veux tu faire de l'e sport ?",
+        "Pouquoi veux tu faire de l'e sport ?",
         "Quelle est ton objectif en voulant rejoindre l'équipe ?",
         "Quel est ton âge ?",
         "As-tu déjà participé à des matchérino ? Si oui, a tu fini a quelle manche ?",
