--- a/questionnaire.html
+++ b/questionnaire.html
@@ -35,16 +35,17 @@
     // Questions en plusieurs langues, la langue est la question 1
     const questionsByLang = {
       FR: [
-        "Quel est ton pseudo discord ?",
-        "Quel est ton ton plus gros rank en classer ?",
-        "Pouquoie veux tu faire de l'e sport ?",
-        "Quelle est ton objectif en voulant rejoindre l'équipe ?",
-        "Quel est ton âge ?",
-        "As-tu déjà participé à des matchérino ? Si oui, quelle manche as-tu atteint ?",
-        "As-tu des mate avec qui tu voudrais jouer ?",
-        "Quelle sont tes disponibilités pour les entraînements ?",
-        "Peut tu voc?",
-        "Sur quelle type d'appareil joue tu ?",
+       "Quelle langue parles-tu ?",
+       "Quel est ton pseudo discord ?",
+       "Quel est ton ton plus gros rank en classer ?",
+       "Pouquoie veux tu faire de l'e sport ?",
+       "Quelle est ton objectif en voulant rejoindre l'équipe ?",
+       "Quel est ton âge ?",
+       "As-tu déjà participé à des matchérino ? Si oui, a tu fini a quelle manche ?",
+       "As-tu des mate avec qui tu voudrais jouer ?",
+       "Quelle sont tes disponibilités pour les entraînements ?",
+       "Peut tu voc?",
+       "Sur quelle type d'appareil joue tu ?",
       ],
       EN: [
         "What is your discord username?",
