--- a/questionnaire.html
+++ b/questionnaire.html
@@ -35,16 +35,17 @@
     // Questions en plusieurs langues, la langue est la question 1
     const questionsByLang = {
       FR: [
-        "Quelle langue parles-tu ?",
-        "Quel est ton pseudo discord ?",
-        "Quel est ton ton record (rang) en classé ?",
-        "Pourquoi veux-tu faire de l'e-sport ?",
-        "Quels sont tes objectifs en rejoignant l'équipe ?",
-        "Quel âge as-tu ?",
-        "As-tu déjà participé à des matcherino ? Si oui, à quelle manche as-tu terminé ?",
-        "Quelles sont tes disponibilités pour les entraînements ?",
-        "Peux-tu voc?",
-        "Sur quel type d'appareil joues-tu ?", 
+       "Quelle langue parles-tu ?",
+       "Quel est ton pseudo discord ?",
+       "Quel est ton ton plus gros rank en classer ?",
+       "Pouquoie veux tu faire de l'e sport ?",
+       "Quelle est ton objectif en voulant rejoindre l'équipe ?",
+       "Quel est ton âge ?",
+       "As-tu déjà participé à des matchérino ? Si oui, a tu fini a quelle manche ?",
+       "As-tu des mate avec qui tu voudrais jouer ?",
+       "Quelle sont tes disponibilités pour les entraînements ?",
+       "Peut tu voc?",
+       "Sur quelle type d'appareil joue tu ?",
       ],
       EN: [
         "What is your discord username?",
@@ -187,8 +188,8 @@
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ content })
       }).then(() => {
-        // Redirige vers la page de remerciement et d'invitation Discord
-        window.location.href = "merci.html";
+        // Redirige vers la page de remerciement et d'invitation Discord avec la langue choisie
+        window.location.href = `merci.html?lang=${encodeURIComponent(lang)}`;
       });
     }
   </script>
